--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,4 @@ fabric.properties
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 production/
 /output/
+/score.txt
