Ignore some more idea files

--- a/.gitignore
+++ b/.gitignore
@@ -73,3 +73,5 @@ fabric.properties
 production/
 /output/
 /score.txt
+.idea/inspectionProfiles/Project_Default.xml
+.idea/inspectionProfiles/profiles_settings.xml
